# Demo

./: .gitignore  CLAUDE.md  Code-review-findings-v1.0.0.md  Final.md  README.md  README.txt  app.py  calculator.py  directory-structure.txt  explain-code-V2-findings-v1.0.0.md  explain-code-findings-v1.0.0.md  explain-code-findings-v1.1.0.md  mermaid-v2-v1.0.0.md  py-code-review-output.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: coverage_gate.md  implementer.md  lint_formatter.md  performance_reviewer.md  planner.md  reviewer.md  security_audit.md  security_reviewer.md  test_runner.md  test_writer.md
.claude/commands/: coverage.md  deps-audit.md  lint.md  perf-review.md  pipeline.md  secrets-scan.md  security-audit.md  security-full.md  security-review.md  tdd.md  team-run.md  test.md
.claude/skills/: py-code-reviewer.md
.claude/skills/explain-code/: SKILL.md
.claude/skills/explain-code-V2/: SKILL.md  reference.md
.claude/skills/explain-code-V2/scripts/: summarize.py
.claude/skills/python-code-review/: SKILL.md
.claude/teams/: calculator_team.md
tests/: test_calculator.py
